fix: scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -192,15 +192,15 @@
 
 /* Custom scrollbar */
 ::-webkit-scrollbar {
-  width: 8px;
+  width: 4px;
 }
 
 ::-webkit-scrollbar-track {
-  @apply bg-gray-800;
+  @apply bg-black;
 }
 
 ::-webkit-scrollbar-thumb {
-  @apply bg-[#00D992] rounded-full;
+  @apply bg-[#00D992] rounded-sm;
 }
 
 ::-webkit-scrollbar-thumb:hover {
